--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
             <br>
             <div class="fullstack">
                 <div class="container">
-                   <span class="left">Kang.</span>
+                   <span class="left">King.</span>
                     <div class="stack" style="--stacks: 3;">
-                      <span style="--index: 0;">Ahmad Suhendar</span>
-                      <span style="--index: 1;">Ahmad Suhendar</span>
-                      <span style="--index: 2;">Ahmad Suhendar</span>
+                      <span style="--index: 0;">Naufal Alfarizi </span>
+                      <span style="--index: 1;">Naufal Alfarizi</span>
+                      <span style="--index: 2;">Naufal Alfarizi</span>
                     </div>
-                    <span class="right">NetAdmin & SysAdmin</span>
+                    <span class="right">Pro Player</span>
                   </div>
             </div>
             <br>
             <div class="typewriter">
-                <h3>$> keberuntungan berpihak pada yang berani&nbsp;</h3>
+                <h3>$>Selalu lakukan yang terbaik, Tapi jangan sampai merasa paling terbaik;</h3>
             </div>
         </div>
     </section>
     <section id="about">
         <div class="deskripsi">
-            <p >Halo, nama saya Inda Muliana. Saya lahir di Garut pada tanggal 7 Desember 1994. Saya tinggal di Garut hingga melanjutkan pendidikan di Institut Teknologi Garut (ITG) dan lulus dengan predikat cumlaude.</p>
+            <p >Halo, nama saya naufal alfarizi. Saya lahir di Garut pada tanggal 17 november 2006. Saya tinggal di Garut hingga melanjutkan pendidikan di Institut Teknologi Garut (ITG) dan lulus dengan predikat cumlaude.</p>
             <p>Saya memiliki berbagai sertifikat keahlian yang saya peroleh melalui pelatihan offline maupun online. Saat ini, saya bekerja sebagai staf pengajar di salah satu sekolah kejuruan dan sebagai konsultan IT di sebuah startup bernama CV Himagrib.</p>
             <p>Sebagai konsultan IT, tugas saya meliputi manajemen server, baik yang berbasis linux (Ubuntu-Centos) maupun windows, pengelolaan jaringan seperti Cisco dan Mikrotik, sistem keamanan CCTV, penerapan perangkat IoT dalam skala smart city, perawatan dan perbaikan perangkat PC dan laptop, serta menjadi konsultan sistem informasi desa untuk lebih dari 64 desa di Jawa Barat. Saya juga menjadi asisten dosen untuk mata kuliah data mining.</p>
          </div>
