--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section id="intro">
         <div class="nama">
-            <img src="inda.jfif" alt="Inda Muliana">
+            <img src="alok.jpg" alt="Naufal Alfarizi">
             <br>
             <div class="fullstack">
                 <div class="container">
