--- a/index.html (1).html
+++ b/index.html (1).html
@@ -27,7 +27,7 @@
             <br>
             <div class="fullstack">
                 <div class="container">
-                   <span class="left">King.</span>
+                   <span class="left">I'M</span>
                     <div class="stack" style="--stacks: 3;">
                       <span style="--index: 0;">Naufal Alfarizi </span>
                       <span style="--index: 1;">Naufal Alfarizi</span>
